terraform/application/aws_lb.aws_security_group.tf
resource "aws_security_group" "inbound" {
  name        = "${local.resource_prefix}-inbound"
  description = "Allow HTTP/HTTPS inbound"
  vpc_id      = "${aws_vpc.es-react-app-ecs-vpc.id}"

  ingress {
    from_port = 80
    to_port   = 80
    protocol  = "tcp"

    cidr_blocks = [
      "0.0.0.0/0",
    ]
  }

  ingress {
    from_port = 443
    to_port   = 443
    protocol  = "tcp"

    cidr_blocks = [
      "0.0.0.0/0",
    ]
  }

  egress {
    from_port = 0
    to_port   = 0
    protocol  = "-1"

    cidr_blocks = [
      "0.0.0.0/0",
    ]
  }

  tags {
    Name = "${local.resource_prefix}-inbound"
  }
}
